Canvas: Strichfarbe fuer Flaechen ist jetzt schwarz

--- a/docs/Canvas/canvas.css
+++ b/docs/Canvas/canvas.css
@@ -1,8 +1,7 @@
 
-/** Regeln für die Zeichenfläche */
 canvas {
 
-    border: 1px solid black;
+    border: 1px solid darkgrey; /* dünner Rand um Zeichenfläche */
 }
 
 
